Calls dot.exe on the gz file